fixed spacing, lettering

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -31,7 +31,7 @@ video{
     
     li{
         display: inline-block; 
-        width: 32.654%;
+        width: 32%;
     }
     
     li:nth-child(1){
